# MLLog

./: README.md  SPECS.md  pyproject.toml
ml_simple_logging/: __init__.py
mllog/: __init__.py
tests/: test_mllog.py
