[project]
name = "mllog"
version = "0.1.0"
description = "Minimal Python logging library for machine learning training loops"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
